--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Combat Wombat</title>
+    <meta name="description" content="A combat app for Rolemaster">
+
+
+    <link rel="icon" href="/src/favicon.png" type="image/png">
+    <link rel="alternate icon" href="/src/favicon.png" type="image/png" sizes="16x16">
+    <link rel="apple-touch-icon" href="/src/apple-touch-icon.png" sizes="180x180">
+    <link rel="mask-icon" href="/src/favicon.png" color="#FFFFFF">
+    <meta name="theme-color" content="#ffffff">
+
   </head>
-  <!--TODO: manifest for offline mode -->
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
